kubernetes/manifests/authentik/templates/cnp.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default
  namespace: authentik
spec:
  endpointSelector: {}
  ingress:
  - fromEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: cloudflare
    - matchLabels:
        io.kubernetes.pod.namespace: victoria-metrics
  egress:
  - toEntities:
    - kube-apiserver
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: redis
  - toFQDNs:
    # https://docs.goauthentik.io/docs/install-config/air-gapped#outbound-connections
    - matchName: updates.maxmind.com
    - matchName: version.goauthentik.io
    - matchName: secure.gravatar.com
    - matchName: smtp.resend.com
    - matchName: mm-prod-geoip-databases.a2649acb697e2c09b632799562c076f2.r2.cloudflarestorage.com
    - matchPattern: "*.nullservers.com"
  - toEndpoints:
    - matchLabels:
        io.kubernetes.pod.namespace: kube-system
        k8s-app: kube-dns
    toPorts:
    - ports:
      - port: "53"
        protocol: UDP
      rules:
        dns:
        - matchPattern: "*"
